[add](deno.json) new version, remove lock file

--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,9 @@
 {
   "name": "turbo",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "github": "https://github.com/Jabolol/turbo",
-
   "imports": {
     "plug": "https://deno.land/x/plug@1.0.2/mod.ts"
-  }
+  },
+  "lock": false
 }
