[add](.github/workflow/release.yml) autogenerated body

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,13 @@ jobs:
         if: runner.os == 'Linux'
         run: strip libturbo.so
 
+      - name: Set description
+        run: |
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "DESCRIPTION<<$EOF" >> "$GITHUB_ENV"
+          $(git log --oneline --no-decorate $(git describe --tags --abbrev=0 @^)..@) >> "$GITHUB_ENV"
+          echo "$EOF" >> "$GITHUB_ENV"
+
       - name: Release
         uses: softprops/action-gh-release@master
         if: ${{ github.ref == 'refs/heads/main' }}
@@ -38,3 +45,4 @@ jobs:
           files: |
             libturbo.so
             libturbo.dylib
+          body: ${{ env.DESCRIPTION }}
