--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Setup repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Install dependencies (Linux)
         if: runner.os == 'Linux'
@@ -45,4 +47,3 @@ jobs:
           files: |
             libturbo.so
             libturbo.dylib
-          body: ${{ env.DESCRIPTION }}
