--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "DESCRIPTION<<$EOF" >> "$GITHUB_ENV"
-          $(git log --oneline --no-decorate $(git describe --tags --abbrev=0 @^)..@) >> "$GITHUB_ENV"
+          git log --oneline --no-decorate $(git describe --tags --abbrev=0 @^)..@ >> "$GITHUB_ENV"
           echo "$EOF" >> "$GITHUB_ENV"
 
       - name: Release
