--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         
     runs-on: ${{ matrix.os }}
 
@@ -22,12 +22,20 @@ jobs:
         if: runner.os == 'Linux'
         run: sudo apt-get update && sudo apt-get install -y --no-install-recommends make gcc libc6-dev
 
+      - name: Install dependencies (Windows)
+        if: runner.os == 'Windows'
+        run: choco install mingw make -y
+
       - name: Build Native Library
         run: make
 
       - name: Strip Native Library (Linux)
         if: runner.os == 'Linux'
         run: strip libturbo.so
+      
+      - name: Strip Native Library (Windows)
+        if: runner.os == 'Windows'
+        run: strip turbo.dll
 
       - name: Determine release body
         run: |
@@ -42,6 +50,7 @@ jobs:
           tag_name: "release draft"
           draft: true
           files: |
+            turbo.dll
             libturbo.so
             libturbo.dylib
           body_path: release_body.txt
